Proyecto2/cluster/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sopes1-workshop-ingress-producer
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
  namespace: so1-p2
spec:
  rules:
  - host: 34.23.123.206.nip.io #IP ingress controller (nginx)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-producer
            port:
              number: 3000
